@@ -45,7 +45,6 @@ CONFIGS = $(SWX11_GLU_CONFIGS) \
 STAMP = $(STAMP_DIR)/$(DEB_BUILD_GNU_TYPE)
 BUILD_STAMPS = $(addprefix $(STAMP)-build-, $(CONFIGS))
 ARCH_INSTALL_STAMPS = $(addprefix $(STAMP)-install-, $(CONFIGS))
-INDEP_INSTALL_STAMPS = $(STAMP_DIR)/install-source
 
 # list the configurations that will built
 configs:
@@ -82,12 +81,6 @@ $(STAMP)-install-%: $(STAMP)-build-%
 	cd $(DEB_BUILD_DIR)/$* && $(MAKE) install DESTDIR=$(CURDIR)/debian/tmp
 	touch $@
 
-$(STAMP_DIR)/install-source: pre-install
-	# install Mesa source for mesa-swx11-source package
-	chmod a+x debian/scripts/install-source.sh
-	debian/scripts/install-source.sh
-	touch $@
-
 clean: unpatch
 	dh_testdir
 	dh_testroot
@@ -95,7 +88,7 @@ clean: unpatch
 	rm -rf $(DEB_BUILD_DIR) $(STAMP_DIR)
 
 # Build architecture-independent files here.
-binary-indep: build install $(INDEP_INSTALL_STAMPS)
+binary-indep: build install
 	dh_testdir
 	dh_testroot
 	dh_installchangelogs -i
